cafe13 이미지 추가

--- a/cafe/coffee/cafe13.html
+++ b/cafe/coffee/cafe13.html
@@ -101,20 +101,20 @@
         <h2>푸쉬커피 소개</h2>
         <p>여기는 푸쉬커피에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20220824_54%2F1661326951429TuL15_JPEG%2F0CBFEC7D-E277-44A0-A219-9EFFE1BBE3DC.jpeg" alt="Cafe 1 Image 1">
-        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyMzEwMDRfMzcg%2FMDAxNjk2NDExMDc3ODA0.0Beo1vDanNWZTfxyMyAd0rq6IVNYdD6fep9hPBc8MIog.ZlgRxxy6be1jg6TcR9MfX3fOQEBccgw7GPn8gMuh6nwg.JPEG%2FIMG_3362.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
-        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzEwMjBfODkg%2FMDAxNjk3Nzg2ODU0NDMz.076vQMf-47UTA8AJUyGoR-R9TzCsEEPWdBeGnOCAqnkg.uAjijuyRMrM9JCDCYQFbWF0_tnX5UTUq7e_fxgHH2EMg.JPEG.maeng_96%2FR0003376.JPG" alt="Cafe 1 Image 3">
-        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAzMjFfMTgw%2FMDAxNzExMDIwNTc5Njc4.MqUYJICl46t_5MdlbjjFjXL230g46pHnGncK-vfpiwsg.XZTscF6qTFsqb3egJZonK1yI0FO2KisQuM1hLdUCAAMg.JPEG%2FR0007386.JPG" alt="Cafe 1 Image 4">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20220318_128%2F1647583579651gGXXF_JPEG%2F%25BF%25DC%25B0%25FC2.jpg" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAyMTVfMjQ1%2FMDAxNzA3OTc0Mzk2ODA3.WXky7JjkhaUiIj0wNefwEAbAIaI1G1WDLMmklOByjZIg.4z4qYb6Ahu-nzLWbnYQ_SGyD6NPPhHT9nVL2ar34PHsg.JPEG.praddaa%2FDSC06624.jpg" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDA0MDRfMTI5%2FMDAxNzEyMTkxNDg4MzAy.w27MwuCkEhYmRbNBQDJCGzrHmgMbcebdQuCmPIqnnx8g.Ym6olmErHnUwAvjrdNK-BzfwPbyqQUCBk2_gtKfiOK4g.JPEG%2FKakaoTalk_20240404_092200768_03.jpg" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzEwMDlfNDcg%2FMDAxNjk2ODExMzIxNDI1.FIk7mXU1e0LmP9j1tX7Y1hVpUddKw_vqK7Ai8dp1Ntkg.jZva-04wnPobmorbLuVr06e9A7vvnoPy-u0IyW8Vdlsg.JPEG.no1alanis%2FP20230918_115238519_DE11E1C2-910E-4B83-88AE-591778ACB80C.jpg" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
-            <a href="https://map.naver.com/v5/entry/place/주소" target="_blank">네이버 지도</a>
-            <a href="https://www.instagram.com/카페인스타그램주소" target="_blank">인스타그램</a>
+            <a href="https://naver.me/FNmIB2OG" target="_blank">네이버 지도</a>
+            <a href="https://www.instagram.com/pushcoffee_official" target="_blank">인스타그램</a>
         </div>
 
         <!-- 지도 삽입 -->
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.994612137412!2d127.07300477456033!3d37.55519072478067!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca5fa4a014613%3A0x5326553b974e1198!2z7Jew7ZWE!5e0!3m2!1sko!2skr!4v1716961378467!5m2!1sko!2skr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.1154999396604!2d127.09123960000001!3d37.55234249999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357cbbac8e00b341%3A0x32b2f0da944242fe!2z7ZG47Ims7Luk7ZS8!5e0!3m2!1sko!2skr!4v1717035276776!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         
         <!-- 목록으로 돌아가기 버튼 -->
