cafe14 이미지 추가

--- a/cafe/coffee/cafe14.html
+++ b/cafe/coffee/cafe14.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 문서의 제목 설정 -->
-    <title>카페 꼬메노</title>
+    <title>꼬메노</title>
     <!-- Google Fonts에서 Do Hyeon 폰트 불러오기 -->
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
     <!-- 내부 스타일 시트 -->
@@ -98,13 +98,13 @@
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
-        <h2>카페 꼬메노 소개</h2>
-        <p>여기는 카페 꼬메노에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <h2>꼬메노 소개</h2>
+        <p>여기는 꼬메노에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="../images/cafe1_1.jpg" alt="Cafe 1 Image 1">
-        <img src="../images/cafe1_2.jpg" alt="Cafe 1 Image 2">
-        <img src="../images/cafe1_3.jpg" alt="Cafe 1 Image 3">
-        <img src="../images/cafe1_4.jpg" alt="Cafe 1 Image 4">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyMzEwMjZfMTU5%2FMDAxNjk4Mjc4NzExMjUw.5R6T9_eNn_HzwbCNvz3I9S-UQn9hpKx6BZP-MegK7-Eg.3Aaps0n5lzcCzyIg6mt1fDylPu9xFrnsadkAphTKTJMg.JPEG%2FE1E0D5DA-355A-4FAD-86D8-8669CF8205EC.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyMzEwMjZfNjkg%2FMDAxNjk4Mjc4NzExMTE4.-AzRRasNkzXj0B6yx7wHl-tLKnnmZLveC_BrETg1BEIg.G1CEoz5f3I9HMPkgJpCBSguKuJHmg6zR_019Sd8W5xMg.JPEG%2FDF5347EA-9AF3-4E4D-AA9E-009244E93FCE.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDAxMjBfMjk0%2FMDAxNzA1NzUzMTUyOTA1.DS1OVA1e1lhe5RKrokDConMLu6U5Fz8c-cLkS-7prq0g.TqjwyLvpZkSIBd11sk_ZWMszUQDMk75Sy1RUgoG5WFIg.JPEG%2F1702907256725.jpg.jpg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAyMTVfMTc4%2FMDAxNzA3OTI0MTg4MTM0.hWBBIZwzobVmk1KskWdhQQOJ6RLLAuAR4s2jnf66nI8g.TFT3RPR8qnUf5ANKYMdM4EzPkMvauAV02nphQT3r01sg.JPEG.bobo0159%2FIMG_0500.jpg" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
@@ -119,7 +119,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='fisrtHTML.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
