cafe16 이미지 추가 및 링크 수정

--- a/cafe/coffee/cafe14.html
+++ b/cafe/coffee/cafe14.html
@@ -108,7 +108,7 @@
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
-            <a href="https://map.naver.com/p/entry/place/20322289?lng=127.0691037&lat=37.5456057&placePath=%2Fhome&entry=plt&searchType=place&c=15.00,0,0,0,dh" target="_blank">네이버 지도</a>
+            <a href="https://naver.me/5TviN3HU" target="_blank">네이버 지도</a>
             <a href="https://www.instagram.com/cafecomeno/" target="_blank">인스타그램</a>
         </div>
 
