--- a/cafe/coffee/cafe16.html
+++ b/cafe/coffee/cafe16.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 문서의 제목 설정 -->
-    <title>카페 코에오 COEO</title>
+    <title>코에오 COEO</title>
     <!-- Google Fonts에서 Do Hyeon 폰트 불러오기 -->
     <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
     <!-- 내부 스타일 시트 -->
@@ -98,17 +98,17 @@
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
-        <h2>카페 코에오 COEO</h2>
-        <p>여기는 카페 코에오 COEO 에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <h2>코에오 COEO</h2>
+        <p>여기는 코에오 COEO 에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="../images/cafe1_1.jpg" alt="Cafe 1 Image 1">
-        <img src="../images/cafe1_2.jpg" alt="Cafe 1 Image 2">
-        <img src="../images/cafe1_3.jpg" alt="Cafe 1 Image 3">
-        <img src="../images/cafe1_4.jpg" alt="Cafe 1 Image 4">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20240322_132%2F1711100750214DSN4Q_JPEG%2FIMG_2128.jpeg" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA1MDNfMjIw%2FMDAxNzE0NzI0NTg2ODg1.dqJrOQ5R_jWs6sHAU8sO1Q0I2m6vWkmrLk4mkI6Mxi0g.sl02ecBkY7a6WThllTOKoInt4M3t3AK0b2RXNbZukN0g.JPEG%2FA8E7CDA0-9BEF-410F-84CC-6BF69A466E04.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA0MTlfMjM4%2FMDAxNzEzNTM4NzEwNTU4.CFDKJCEo0WhpL_a-Y0oRnjPvIwsNYdF2jAsdNapmwxAg.hXevinn4OhYDPmfHzzqMfRnaHLrZNpdRQ0w9CY5CcXUg.JPEG%2FFE993D49-F50A-44F5-98CC-4D0387982701.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA0MTZfMTA5%2FMDAxNzEzMjQxOTE0MDQ3.VgqR0CGro7JWwErCSbjx8aPKaeqYw3-pGe5g9KdbqR8g.hufvVFeZB39A5fVHumh3nl0cafuw9gg111lFCEnDtocg.JPEG%2F20240413_122238.jpg.jpg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
-            <a href="https://map.naver.com/p/entry/place/1074798383?lng=127.0614445&lat=37.539768&placePath=%2Finformation&entry=plt&searchType=place&c=15.00,0,0,0,dh" target="_blank">네이버 지도</a>
+            <a href="https://naver.me/FfiziSJg" target="_blank">네이버 지도</a>
             <a href="https://www.instagram.com/coeo_kr/" target="_blank">인스타그램</a>
         </div>
 
