--- a/cafe/coffee/cafe15.html
+++ b/cafe/coffee/cafe15.html
@@ -101,14 +101,14 @@
         <h2>카페 모츠커피</h2>
         <p>여기는 카페 모츠커피 에 대한 간단한 소개글이 들어갈 자리입니다.</p>
         <!-- 카페 이미지 -->
-        <img src="../images/cafe1_1.jpg" alt="Cafe 1 Image 1">
-        <img src="../images/cafe1_2.jpg" alt="Cafe 1 Image 2">
-        <img src="../images/cafe1_3.jpg" alt="Cafe 1 Image 3">
-        <img src="../images/cafe1_4.jpg" alt="Cafe 1 Image 4">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20220823_174%2F1661214475765AU8oB_JPEG%2FScreenshot_20220821-075942_Instagram.jpg" alt="Cafe 1 Image 1">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA1MTJfMjI3%2FMDAxNzE1NTI1NTYxMDI4.FjR0lkSbDEaripu3fxg-nNAkxur0jIGcjn-hYDGYovcg.XB_LaR5gcSliX6BsytSVBAEUx-YuwkEet58-Ez2xJDkg.JPEG%2F4C9310E4-751C-404D-90C1-07204D4B0147.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAzMTZfNDUg%2FMDAxNzEwNTk3OTE0NDMz.JFgInpLroWGH7ndVLyPuzEfACaVcyul5IpT44jWFDDEg.xynF2ApaLuwFLN_phOXxq0jKq-_XLWfcrcW4JNJBRpwg.JPEG%2F20240314%25A3%25DF191151.jpg" alt="Cafe 1 Image 3">
+        <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA0MjhfMjI5%2FMDAxNzE0Mjk1NzUwNTU2.IXppKV-RSdGK5YcFAAPqSiuSSKJUd63YEIWqkrd47Ucg._oSm0PhcwY-VitktOOg7ba1JumMgLKHAWrsBn4cNmyQg.JPEG%2F7643DCBC-2DB5-43EE-A6A4-7C4144C3AC8A.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 4">
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
-            <a href="https://map.naver.com/p/entry/place/1023633937?lng=127.0705012&lat=37.5446291&placePath=%2Fhome&entry=plt&searchType=place&c=15.00,0,0,0,dh" target="_blank">네이버 지도</a>
+            <a href="https://naver.me/GDNO6q4A" target="_blank">네이버 지도</a>
             <a href="https://www.instagram.com/mots_coffee/" target="_blank">인스타그램</a>
         </div>
 
@@ -119,7 +119,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='fisrtHTML.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
