--- a/cafe/mood/cafe3.html
+++ b/cafe/mood/cafe3.html
@@ -108,7 +108,7 @@
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
-            <a href="https://map.naver.com/p/entry/place/910411471?lng=127.0701134&lat=37.5469388&placePath=%2Fhome&entry=plt&searchType=place&c=15.00,0,0,0,dh" target="_blank">네이버 지도</a>
+            <a href="https://naver.me/xXrDwqwz" target="_blank">네이버 지도</a>
             <a href="https://www.instagram.com/mkgallery_studio" target="_blank">인스타그램</a>
         </div>
 
