--- a/cafe/mood/cafe4.html
+++ b/cafe/mood/cafe4.html
@@ -108,7 +108,7 @@
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
-            <a href="https://map.naver.com/p/search/카페%20본지르르?c=15.00,0,0,0,dh" target="_blank">네이버 지도</a>
+            <a href="https://naver.me/GVNMRodr" target="_blank">네이버 지도</a>
             <a href="https://www.instagram.com/vonzrr_seongsu/" target="_blank">인스타그램</a>
         </div>
 
