--- a/cafe/mood/pencil.html
+++ b/cafe/mood/pencil.html
@@ -99,7 +99,12 @@
     <div class="content">
         <!-- 카페 연필 소개글 -->
         <h2>카페 연필 소개</h2>
-        <p>여기는 카페 연필에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>연필 ; 緣苾<br>
+            인연 연 緣 향기로울 필 苾<br>
+            인연이 피어 향기로운 공간<br>
+            ***매주 화요일 휴무<br>
+            월-금 11:00~20:00<br>
+            주말/공휴일 12:00~21:00</p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20220824_54%2F1661326951429TuL15_JPEG%2F0CBFEC7D-E277-44A0-A219-9EFFE1BBE3DC.jpeg" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyMzEwMDRfMzcg%2FMDAxNjk2NDExMDc3ODA0.0Beo1vDanNWZTfxyMyAd0rq6IVNYdD6fep9hPBc8MIog.ZlgRxxy6be1jg6TcR9MfX3fOQEBccgw7GPn8gMuh6nwg.JPEG%2FIMG_3362.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
