--- a/cafe/mood/pencil.html
+++ b/cafe/mood/pencil.html
@@ -113,8 +113,8 @@
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
-            <a href="https://map.naver.com/v5/entry/place/주소" target="_blank">네이버 지도</a>
-            <a href="https://www.instagram.com/카페인스타그램주소" target="_blank">인스타그램</a>
+            <a href="https://naver.me/F1LCvOqI" target="_blank">네이버 지도</a>
+            <a href="https://www.instagram.com/yeonpil_official/" target="_blank">인스타그램</a>
         </div>
 
         <!-- 지도 삽입 -->
