--- a/cafe/coffee/cafe13.html
+++ b/cafe/coffee/cafe13.html
@@ -99,12 +99,11 @@
     <div class="content">
         <!-- 카페 푸쉬커피 소개글 -->
         <h2>푸쉬커피 소개</h2>
-        <p>푸쉬커피는 PUSH YOUR LIFE (하고싶은 일을 밀어붙여라) 라는 슬로건 하에 맛있는 커피와 쿠키를 제공, 재미있는 프로젝트로 푸쉬커피의 메시지를 전달합니다.
-.
-[대표메뉴]
--블랜딩 우유를 사용해 더 고소하고 부드러운 푸쉬라떼
--캬라멜 크림이 올라가 달콤하게 즐길 수 있는 아차산슈페너
--바삭담백한 클래식쿠키</p>
+        <p>푸쉬커피는 PUSH YOUR LIFE (하고싶은 일을 밀어붙여라) 라는 슬로건 하에 맛있는 커피와 쿠키를 제공, 재미있는 프로젝트로 푸쉬커피의 메시지를 전달합니다.<br>
+        [대표메뉴]<br>
+        -블랜딩 우유를 사용해 더 고소하고 부드러운 푸쉬라떼<br>
+        -캬라멜 크림이 올라가 달콤하게 즐길 수 있는 아차산슈페너<br>
+        -바삭담백한 클래식쿠키</p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20220318_128%2F1647583579651gGXXF_JPEG%2F%25BF%25DC%25B0%25FC2.jpg" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAyMTVfMjQ1%2FMDAxNzA3OTc0Mzk2ODA3.WXky7JjkhaUiIj0wNefwEAbAIaI1G1WDLMmklOByjZIg.4z4qYb6Ahu-nzLWbnYQ_SGyD6NPPhHT9nVL2ar34PHsg.JPEG.praddaa%2FDSC06624.jpg" alt="Cafe 1 Image 2">
