--- a/cafe/coffee/cafe14.html
+++ b/cafe/coffee/cafe14.html
@@ -99,7 +99,16 @@
     <div class="content">
         <!-- 카페 연필 소개글 -->
         <h2>꼬메노 소개</h2>
-        <p>여기는 꼬메노에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>아담하고 조용한 골목길의 카페입니다. 작은 공간에 구석 구석 숨어있는 다양한 소품들이 매력을 뽐내는 곳이지요. 메뉴로 커피, 티, 라떼, 모히트, 과일쥬스, 에이드 등 다양한 종류의 음료가 있다고 하네요.<br>
+            [대표메뉴]<br>
+            -에스프레소/아메리카노<br>
+            -카페라떼<br>
+            -바닐라라떼/헤이즐넛라떼/샤커레또<br>
+            -생과일에이드<br>
+            -퐁당오쇼콜라/티라미수<br>
+            -레드넥타<br>
+            -메도우<br>
+        </p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyMzEwMjZfMTU5%2FMDAxNjk4Mjc4NzExMjUw.5R6T9_eNn_HzwbCNvz3I9S-UQn9hpKx6BZP-MegK7-Eg.3Aaps0n5lzcCzyIg6mt1fDylPu9xFrnsadkAphTKTJMg.JPEG%2FE1E0D5DA-355A-4FAD-86D8-8669CF8205EC.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyMzEwMjZfNjkg%2FMDAxNjk4Mjc4NzExMTE4.-AzRRasNkzXj0B6yx7wHl-tLKnnmZLveC_BrETg1BEIg.G1CEoz5f3I9HMPkgJpCBSguKuJHmg6zR_019Sd8W5xMg.JPEG%2FDF5347EA-9AF3-4E4D-AA9E-009244E93FCE.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
