--- a/cafe/coffee/cafe15.html
+++ b/cafe/coffee/cafe15.html
@@ -97,7 +97,7 @@
     <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
-        <!-- 카페 연필 소개글 -->
+        <!-- 카페 모츠커피 소개글 -->
         <h2>카페 모츠커피</h2>
         <p>이탈리안 에스프레소 바<br>
             -에스프레소<br>
