--- a/cafe/coffee/cafe16.html
+++ b/cafe/coffee/cafe16.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -99,7 +100,16 @@
     <div class="content">
         <!-- 카페 연필 소개글 -->
         <h2>코에오 COEO</h2>
-        <p>여기는 코에오 COEO 에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>다양한 스페셜티 커피와 디저트를 내어드립니다.<br>
+            -저희는 누구나 편히 머물다 갈 수 있는 공간을 추구합니다.<br> 
+            -오다가다 편히 발걸음 해주시면 감사하겠습니다.<br>
+            -YUKI<br>
+            -HAND DRIP<br>
+            -Custard pudding<br>
+            -Coranitas<br>
+            -Coeo sand cookie<br>
+            -Basque chessecake<br>
+        </p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20240322_132%2F1711100750214DSN4Q_JPEG%2FIMG_2128.jpeg" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA1MDNfMjIw%2FMDAxNzE0NzI0NTg2ODg1.dqJrOQ5R_jWs6sHAU8sO1Q0I2m6vWkmrLk4mkI6Mxi0g.sl02ecBkY7a6WThllTOKoInt4M3t3AK0b2RXNbZukN0g.JPEG%2FA8E7CDA0-9BEF-410F-84CC-6BF69A466E04.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
