--- a/cafe/dessert/cafe5.html
+++ b/cafe/dessert/cafe5.html
@@ -99,7 +99,18 @@
     <div class="content">
         <!-- 카페 연필 소개글 -->
         <h2>베티버 성수 소개</h2>
-        <p>여기는 베티버 성수에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>흑임자 메뉴와 아이스크림이 맛있는 성수카페  주차안내 - 테이크아웃 매장 옆 정차가능 / 주차는 뚝도시장공영 혹은 성수2가 1동공영 이용 부탁드립니다.<br>
+            저녁 8시 이후 디저트는 문의주세요<br>
+            -아이스크림 라떼<br>
+            -흑임자크림라떼<br>
+            -크로플<br>
+            -아메리카노<br>
+            -카페라떼<br>
+            -바닐라빈라떼<br>
+            -오트라떼<br>
+            -밀크아이스크림<br>
+            -오레오흑임자<br>
+        </p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDA1MTdfMTYy%2FMDAxNzE1OTMyNDk0MzQz.qbbXTOZuhiTXsC5gqu8CLuXeEynJTLK9dZRM2ehHIr0g.yzJfFAwxttHgehwjaaYr5GhJiLdOIyba0JW-0c1jGyQg.JPEG%2FKakaoTalk_20240517_163221185_04.jpg" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20230802_6%2F1690943199432pIBVT_JPEG%2FIMG_0164.jpeg" alt="Cafe 1 Image 2">
