--- a/cafe/dessert/cafe6.html
+++ b/cafe/dessert/cafe6.html
@@ -99,7 +99,16 @@
     <div class="content">
         <!-- 카페 연필 소개글 -->
         <h2>솔티드 소개</h2>
-        <p>여기는 솔티드에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>꾸덕한 다크초코 브라우니 (밀가루X) 진한 정통 커스터드 푸딩  단호박 그대로 펌킨파이.<br>
+            (100% 통밀)  유기농 버터/ 고급 다크 초콜렛/ 등 좋은 재료만을 이용해 매일 직접 만드는 수제 디저트 카페입니다.<br>
+            -펌킨파이<br>
+            -정통 커스터드 푸딩<br>
+            -아메리카노 Large<br>
+            -카페라떼<br>
+            -다크초코 브라우니<br>
+            -제주말차 블론디<br>
+            -한 판 펌킨파이<br>
+        </p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA1MDhfMTYx%2FMDAxNzE1MTM0OTQxMzAy.2zAd-qULG-ouQw_F6HJjgnYU_icCWNxwTyffHITMSl4g.B9dvvAnoNZ_2jmqodwI-kBpYGqNI5coHChBZGm-_R2gg.JPEG%2F20240507_161037.jpg.jpg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDAzMTBfMjk5%2FMDAxNzEwMDc3OTU3NTQ4.2BsOf59dJRuDcTDJnTOO0tmAzElVzjbcsrXy32peiH4g.wB0fVh92oHe_UW5VIhXCGG98PuM6tLWw7tWbEpNLbKUg.JPEG%2FA2E4C47E-18FE-4564-9C1D-67CD86115694.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
