--- a/cafe/dessert/cafe7.html
+++ b/cafe/dessert/cafe7.html
@@ -99,7 +99,12 @@
     <div class="content">
         <!-- 카페 지나고나면 소개글 -->
         <h2>지나고나면 소개</h2>
-        <p>여기는 지나고나면에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>아차산역 근처에 위치한 디저트 카페입니다.<br>
+            -망고 토르테<br>
+            -라즈베리 리치 빅토리아<br>
+            -단호박 쑥 파운드케이크<br>
+            -단호박 쑥 파운드 홀케이크<br>
+        </p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA0MThfMjc4%2FMDAxNzEzNDIxNTEyMTg4.QaridsdaTwRF-oxpmfR2tYf7X9l255cFLXHgz9z5Crgg.wsd08KOIhBO4rc_Bqjzpj8ZEJ_v5o8kCl2_-y6aWWd0g.JPEG%2F019E14A9-9BB1-405F-AB5A-EC6BC428FB41.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA0MThfNjMg%2FMDAxNzEzNDIxNTEzMzUz.GQ1b4TFARWgPu4MB_A5b87FE5OYPUdf8S3AQUkN3T-Yg.Kb4SJsle_d6D51Nw_40BhGvVHZkmsqmmGQdw13IbU6kg.JPEG%2FD0A9F9AA-F171-48AB-A0F0-5F1D0393C8F0.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
