--- a/cafe/dessert/cafe8.html
+++ b/cafe/dessert/cafe8.html
@@ -99,7 +99,19 @@
     <div class="content">
         <!-- 카페 연필 소개글 -->
         <h2>레스트인무드 소개</h2>
-        <p>여기는 레스트인무드에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>안녕하세요 레스트 인 무드(카페 림)입니다 유기농 밀가루, 동물성 생크림, 프랑산 고메버터,<br>
+             뉴질랜드산 앵커버터를 이용하여 건강하고 신선한 디저트를 만듭니다<br>
+             - 홀케이크 주문및 디저트 박스 주문은 2일전 예약 가능합니다.<br>
+             - 작은 골목에 있는 카페로 주차장이 없는 점 양해부탁드립니다.<br>
+             [대표메뉴]
+            -시그니처 림 커피<br>
+            -바나나푸딩<br>
+            -에그타르트<br>
+            -핫 치킨 머쉬룸 샌드위치<br>
+            -애플 루꼴라 샌드위치<br>
+            -레몬에이드<br>
+            -오틀리라떼<br>
+        </p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20240326_218%2F1711438659920Eylkf_JPEG%2FKakaoTalk_20240326_160212283_01.jpg" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDA0MjhfOTMg%2FMDAxNzE0MjkyMTk1OTMz.cTB6-S5K11Oil2X4we01UTribXAzfhnZ4WCpxjqzY_Ag.7nQXdoGh7aXVFE3VEKG6geamTXmfmRl8HqbD29qkkNMg.JPEG%2FF5A9E9D9-557B-4C64-B1E0-25B0DACE11F8.jpeg%3Ftype%3Dw1500_60_sharpen" alt="Cafe 1 Image 2">
