--- a/cafe/mood/cafe2.html
+++ b/cafe/mood/cafe2.html
@@ -98,8 +98,18 @@
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
+        <p>
         <h2>카페 IWLT SEOUL 소개</h2>
-        <p>여기는 카페 IWLT SEOUL에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>IWLT branch in seoul<br>
+            1st IwltDaegu _ I would like to<br> 
+        2nd IwltSeoul _ I would love to<br>
+        Furniture cafe IWLT<br>
+        [대표메뉴]
+        -아몬드오레<br>
+        -말차오레<br>
+        -아메리카노<br>
+        -디카페인 민트티<br>
+        </p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzEwMjdfMjkg%2FMDAxNjk4NDEyNTUzODIx.mF1KHoHlPnudWmYJr_BsYUDdZvqL1jyE1T8ZuYZpyXsg.DGhzVBHWPGSU6Ep-gVTdZiIV3MifPiITJNIum2n6AE4g.JPEG.wodud7478%2FLRG_DSC04806.jpg&type=a340" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAyMTVfMTgg%2FMDAxNzA3OTc0NzYwNTQx.kGCuO85iXbJ8lNc4FXC63I3YFZ6q0qSZ8JHyZ9gWRgkg.jEjnIXouTAaPp2cjrAvOwGqM-5D9gkyGz3y_wIPK3r4g.JPEG.eroi9l0%2FIMG_2899.jpg&type=a340" alt="Cafe 1 Image 2">
