--- a/cafe/mood/cafe3.html
+++ b/cafe/mood/cafe3.html
@@ -99,7 +99,17 @@
     <div class="content">
         <!-- 카페 연필 소개글 -->
         <h2>카페 앰케이갤러리스튜디오 소개</h2>
-        <p>여기는 카페 앰케이 갤러리스튜디오에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>Mkgallery_studio는 2016년 김문근 작가가 오픈한 청년 예술가들의 1:1 피드백 수업이 진행되는 아트클래스와 카페를 겸한 예술공간입니다.<br>
+        [대표메뉴]<br>
+        -수제 티라미수<br>
+        -크로크무슈<br>
+        -아메리카노<br>
+        -솔티드크림라떼<br>
+        -타바론 티<br>
+        -마시멜로우초코<br>
+        -흑임자샷라떼<br>
+        -라떼<br>
+        -바닐라라떼<br></p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAxMTNfMTU4%2FMDAxNzA1MTIwMTA3NDc5.2nxXFOC6MIrxzg7SARK1u9pzgz0rzK812977mFYeVB0g.bISdjsVPPD2lp90mBLcRJMs9gPpTLWgV9Alg4dxGTBsg.JPEG.syyy5385%2FIMG_5884.jpg&type=a340" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzA0MTlfMTkz%2FMDAxNjgxODk2ODI1MDk2.DSMDYVeGoRROBiqgup2-ITEyXTdiM4W7lfR1tmJb7RQg.YSuHeczmY1yuRPCnhehY8bGONIZXNgd0eEYGEWrQY40g.JPEG.artspacemk%2FIMG_8800.jpg&type=sc960_832" alt="Cafe 1 Image 2">
