--- a/cafe/mood/cafe4.html
+++ b/cafe/mood/cafe4.html
@@ -99,7 +99,13 @@
     <div class="content">
         <!-- 카페 연필 소개글 -->
         <h2>본지르르 성수 소개</h2>
-        <p>여기는 본지르르 성수에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>본지르르는 '본질'과 '번지르르'의 합성어이며 카페의 본질인 식음료의 맛, 편안한 공간 등을 기본으로 겉모습까지 갖추겠다라는 의미를 가지고 있습니다.<br>
+        [대표메뉴]<br>
+        -아메리카노<br>
+        -카페라떼<br>
+        -바닐라라뗴<br>
+        -드립커피<br>
+        -본지르르 머핀<br></p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20231104_221%2F1699067977040j5DPS_JPEG%2F981C16A9-0692-4558-A080-8E7901CFE3F6.jpeg" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20231104_58%2F16990679793056dxiF_JPEG%2F7838A5B0-257A-417C-88FF-0BDF5339AFC0.jpeg" alt="Cafe 1 Image 2">
