--- a/cafe/study/cafe10.html
+++ b/cafe/study/cafe10.html
@@ -98,8 +98,16 @@
     <!-- 페이지 콘텐츠 -->
     <div class="content">
         <!-- 카페 연필 소개글 -->
+        <p>
         <h2>체리커피 소개</h2>
-        <p>여기는 체리커피에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>환상적인 커피맛과 디저트 브런치, 그리고 아름다운 만남의 장소와 쉼터를 제공하고 있습니다.<br>
+        [대표메뉴]<br>
+        -아메리카노<br>
+        -카페라떼<br>
+        -바닐라빈 라떼<br>
+        -까눌레<br>
+        -에이드<br>
+        </p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20221218_111%2F1671346585833osUBG_JPEG%2FIMG_6606.jpeg" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20221218_292%2F1671346589537K2m98_JPEG%2FIMG_6615.jpeg" alt="Cafe 1 Image 2">
