--- a/cafe/study/cafe11.html
+++ b/cafe/study/cafe11.html
@@ -99,7 +99,17 @@
     <div class="content">
         <!-- 카페 연필 소개글 -->
         <h2>카페 보난자커피 소개</h2>
-        <p>여기는 카페 보난자커피에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>더 나은 커피 한 잔을 위한 필요 이상의 집착과 끝없는 궁금증.  2006년 독일 베를린에서 시작한 보난자커피 Bonanza Coffee는 유럽의 스페셜티 커피 문화를 이끈 브랜드 중 하나로, 공정무역과 라이트 로스팅을 추구합니다.<br>
+        [대표메뉴]
+        -Filter Coffee<br>
+        -마블 초콜렛 파운드<br>
+        -아메리카노<br>
+        -카페라떼<br>
+        -플랫화이트<br>
+        -서울라떼<br>
+        -아이스 카푸치노<br>
+        -초콜릿<br>
+        </p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20220518_58%2F1652861247773Dike6_JPEG%2F_MG_4177.JPG" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjExMjhfMjk4%2FMDAxNjY5NTY1OTEwMzA1.8B25Lq760R6uMPiVfYPeYei6FyNtC6pGB5rs-Jaunz0g.x6JBOAKaZ9TxIfQ2iXE1H2_10gO1vPBG7dEvFGZIEugg.JPEG.kbm2870%2F1669565349458.jpg&type=sc960_832" alt="Cafe 1 Image 2">
