--- a/cafe/study/cafe12.html
+++ b/cafe/study/cafe12.html
@@ -100,7 +100,11 @@
     <div class="content">
         <!-- 카페 연필 소개글 -->
         <h2>카페 온더플랜 소개</h2>
-        <p>여기는 카페 온더플랜에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>안녕하세요. 온더플랜 커피 컴퍼니입니다. 저희 스테인드 커피 로스터스 건대점은 직접 로스팅한 스페셜티 커피를 제공합니다.  저희 전 직원들은 온더플랜 커피랩에서의 바리스타 교육을 전원 이수하였습니다. 감사합니다.<br>
+        [대표메뉴]<br>
+        -에스프레소 솔로솔로<br>
+        -레드베리 아이스티<br>
+        -아메리카노<br></p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxODAzMDJfMjkx%2FMDAxNTE5OTc0NjU0NDUy.I7SByBMNAj4qAzQY3Ejz4JnTZYlbwWEzG5nIwxrpy4gg.ANZ8aDYar-8On9-epSNLWZjekMZouzV233emiNunng0g.JPEG.possess3117%2F20180302_124538.jpg&type=sc960_832" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMDAzMTRfNzcg%2FMDAxNTg0MTkzMTI0NjY3.-sCQd0JgAd7l9B9RfJ2wdJwg7BhnxYCkTuR6yn5MSLQg.z_Rz5-URq2t66TT7EOIr-BNLESOIgMW1NKgbzaGBKWAg.JPEG.kts319%2FKakaoTalk_20200314_215157903_01.jpg&type=sc960_832" alt="Cafe 1 Image 2">
