--- a/cafe/study/cafe9.html
+++ b/cafe/study/cafe9.html
@@ -99,7 +99,13 @@
     <div class="content">
         <!-- 카페 연필 소개글 -->
         <h2>애크로매틱커피 소개</h2>
-        <p>여기는 애크로매틱커피에 대한 간단한 소개글이 들어갈 자리입니다.</p>
+        <p>:: 에스프레소와 베리에이션 음료가 준비되어 있습니다. :: 싱글 오리진 에스프레소를 만나볼 수 있습니다. :: 핸드드립 커피는 약배전과 강배전으로 준비되어 있습니다.<br>
+        [대표메뉴]<br>
+        -크렘 브륄레 라테<br>
+        -티리온<br>
+        -오렌지 라테<br>
+        -카페 라테<br>
+        -아메리카노<br></p>
         <!-- 카페 이미지 -->
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20231209_220%2F1702110245959u7He7_JPEG%2F%25C5%25A9%25B1%25E2%25BA%25AF%25C8%25AFKakaoTalk_20231208_091728267_02.jpg" alt="Cafe 1 Image 1">
         <img src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20231209_140%2F1702110245870blcUI_JPEG%2F%25C5%25A9%25B1%25E2%25BA%25AF%25C8%25AFKakaoTalk_20231208_091728267_11.jpg" alt="Cafe 1 Image 2">
