메인 페이지 initializePage 함수 추가에 따른 수정

--- a/cafe/coffee/cafe14.html
+++ b/cafe/coffee/cafe14.html
@@ -97,7 +97,7 @@
     <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
-        <!-- 카페 연필 소개글 -->
+        <!-- 카페 꼬메노 소개글 -->
         <h2>꼬메노 소개</h2>
         <p>아담하고 조용한 골목길의 카페입니다. 작은 공간에 구석 구석 숨어있는 다양한 소품들이 매력을 뽐내는 곳이지요. 메뉴로 커피, 티, 라떼, 모히트, 과일쥬스, 에이드 등 다양한 종류의 음료가 있다고 하네요.<br>
             [대표메뉴]<br>
@@ -128,7 +128,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=4&category=커피가 맛있는 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
