--- a/cafe/coffee/cafe15.html
+++ b/cafe/coffee/cafe15.html
@@ -129,7 +129,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=4&category=커피가 맛있는 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
