--- a/cafe/dessert/cafe5.html
+++ b/cafe/dessert/cafe5.html
@@ -97,10 +97,10 @@
     <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
-        <!-- 카페 연필 소개글 -->
+        <!-- 베티버 성수 소개글 -->
         <h2>베티버 성수 소개</h2>
-        <p>흑임자 메뉴와 아이스크림이 맛있는 성수카페  주차안내 - 테이크아웃 매장 옆 정차가능 / 주차는 뚝도시장공영 혹은 성수2가 1동공영 이용 부탁드립니다.<br>
-            저녁 8시 이후 디저트는 문의주세요<br>
+        <p>흑임자 메뉴와 아이스크림이 맛있는 성수카페 <br>
+            [대표메뉴]<br>
             -아이스크림 라떼<br>
             -흑임자크림라떼<br>
             -크로플<br>
@@ -130,7 +130,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=2&category=디저트가 맛있는 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
