--- a/cafe/dessert/cafe6.html
+++ b/cafe/dessert/cafe6.html
@@ -97,7 +97,7 @@
     <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
-        <!-- 카페 연필 소개글 -->
+        <!-- 솔티드 소개글 -->
         <h2>솔티드 소개</h2>
         <p>꾸덕한 다크초코 브라우니 (밀가루X) 진한 정통 커스터드 푸딩  단호박 그대로 펌킨파이.<br>
             (100% 통밀)  유기농 버터/ 고급 다크 초콜렛/ 등 좋은 재료만을 이용해 매일 직접 만드는 수제 디저트 카페입니다.<br>
@@ -128,7 +128,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=2&category=디저트가 맛있는 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
