--- a/cafe/dessert/cafe7.html
+++ b/cafe/dessert/cafe7.html
@@ -124,7 +124,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=2&category=디저트가 맛있는 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
