--- a/cafe/mood/cafe2.html
+++ b/cafe/mood/cafe2.html
@@ -97,11 +97,10 @@
     <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
-        <!-- 카페 연필 소개글 -->
+        <!-- IWLT SEOUL 소개글 -->
         <p>
         <h2>카페 IWLT SEOUL 소개</h2>
         <p>IWLT branch in seoul<br>
-            1st IwltDaegu _ I would like to<br> 
         2nd IwltSeoul _ I would love to<br>
         Furniture cafe IWLT<br>
         [대표메뉴]
