--- a/cafe/mood/cafe3.html
+++ b/cafe/mood/cafe3.html
@@ -97,7 +97,7 @@
     <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
-        <!-- 카페 연필 소개글 -->
+        <!-- 카페 엠케이갤러리스튜디오 소개글 -->
         <h2>카페 앰케이갤러리스튜디오 소개</h2>
         <p>Mkgallery_studio는 2016년 김문근 작가가 오픈한 청년 예술가들의 1:1 피드백 수업이 진행되는 아트클래스와 카페를 겸한 예술공간입니다.<br>
         [대표메뉴]<br>
@@ -129,7 +129,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='fisrtHTML.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=1&category=분위기가 좋은 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
