--- a/cafe/mood/cafe4.html
+++ b/cafe/mood/cafe4.html
@@ -97,7 +97,7 @@
     <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
-        <!-- 카페 연필 소개글 -->
+        <!-- 본지르르 성수 소개글 -->
         <h2>본지르르 성수 소개</h2>
         <p>본지르르는 '본질'과 '번지르르'의 합성어이며 카페의 본질인 식음료의 맛, 편안한 공간 등을 기본으로 겉모습까지 갖추겠다라는 의미를 가지고 있습니다.<br>
         [대표메뉴]<br>
@@ -125,7 +125,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='fisrtHTML.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=1&category=분위기가 좋은 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
