--- a/cafe/study/cafe10.html
+++ b/cafe/study/cafe10.html
@@ -97,7 +97,7 @@
     <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
-        <!-- 카페 연필 소개글 -->
+        <!-- 체리커피 소개글 -->
         <p>
         <h2>체리커피 소개</h2>
         <p>환상적인 커피맛과 디저트 브런치, 그리고 아름다운 만남의 장소와 쉼터를 제공하고 있습니다.<br>
@@ -127,7 +127,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='../../main.html?function=showPage&page=1&category=분위기가 좋은 카페'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=3&category=공부하기 좋은 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
