--- a/cafe/study/cafe9.html
+++ b/cafe/study/cafe9.html
@@ -97,9 +97,11 @@
     <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
-        <!-- 카페 연필 소개글 -->
-        <h2>애크로매틱커피 소개</h2>
-        <p>:: 에스프레소와 베리에이션 음료가 준비되어 있습니다. :: 싱글 오리진 에스프레소를 만나볼 수 있습니다. :: 핸드드립 커피는 약배전과 강배전으로 준비되어 있습니다.<br>
+        <!-- 애크로매틱 커피 소개글 -->
+        <h2>애크로매틱 커피 소개</h2>
+        <p>:: 에스프레소와 베리에이션 음료가 준비되어 있습니다. ::<br>
+            :: 싱글 오리진 에스프레소를 만나볼 수 있습니다. ::<br>
+             핸드드립 커피는 약배전과 강배전으로 준비되어 있습니다.<br>
         [대표메뉴]<br>
         -크렘 브륄레 라테<br>
         -티리온<br>
@@ -125,7 +127,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=3&category=공부하기 좋은 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
