--- a/cafe/coffee/cafe13.html
+++ b/cafe/coffee/cafe13.html
@@ -123,7 +123,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='../../main.html?function=showPage&page=1&category=분위기가 좋은 카페'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=4&category=커피가 맛있는 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
