--- a/cafe/dessert/cafe8.html
+++ b/cafe/dessert/cafe8.html
@@ -97,12 +97,9 @@
     <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
-        <!-- 카페 연필 소개글 -->
+        <!-- 카페 레스트인무드 소개글 -->
         <h2>레스트인무드 소개</h2>
-        <p>안녕하세요 레스트 인 무드(카페 림)입니다 유기농 밀가루, 동물성 생크림, 프랑산 고메버터,<br>
-             뉴질랜드산 앵커버터를 이용하여 건강하고 신선한 디저트를 만듭니다<br>
-             - 홀케이크 주문및 디저트 박스 주문은 2일전 예약 가능합니다.<br>
-             - 작은 골목에 있는 카페로 주차장이 없는 점 양해부탁드립니다.<br>
+        <p>작은 골목에 있는 유기농 밀가루, 동물성 생크림, 프랑산 고메버터, 뉴질랜드산 앵커버터를 이용하여 디저트를 만드는 카페.<br>
              [대표메뉴]
             -시그니처 림 커피<br>
             -바나나푸딩<br>
@@ -131,7 +128,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=2&category=디저트가 맛있는 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
