--- a/cafe/study/cafe11.html
+++ b/cafe/study/cafe11.html
@@ -97,7 +97,7 @@
     <div class="banner" onclick="location.href='../../main.html'">세종대학교 주변 카페 추천</div>
     <!-- 페이지 콘텐츠 -->
     <div class="content">
-        <!-- 카페 연필 소개글 -->
+        <!-- 보난자커피 소개글 -->
         <h2>카페 보난자커피 소개</h2>
         <p>더 나은 커피 한 잔을 위한 필요 이상의 집착과 끝없는 궁금증.  2006년 독일 베를린에서 시작한 보난자커피 Bonanza Coffee는 유럽의 스페셜티 커피 문화를 이끈 브랜드 중 하나로, 공정무역과 라이트 로스팅을 추구합니다.<br>
         [대표메뉴]
@@ -129,7 +129,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='fisrtHTML.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=3&category=공부하기 좋은 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
