--- a/cafe/study/cafe12.html
+++ b/cafe/study/cafe12.html
@@ -98,9 +98,9 @@
 
     <!-- 페이지 콘텐츠 -->
     <div class="content">
-        <!-- 카페 연필 소개글 -->
-        <h2>카페 온더플랜 소개</h2>
-        <p>안녕하세요. 온더플랜 커피 컴퍼니입니다. 저희 스테인드 커피 로스터스 건대점은 직접 로스팅한 스페셜티 커피를 제공합니다.  저희 전 직원들은 온더플랜 커피랩에서의 바리스타 교육을 전원 이수하였습니다. 감사합니다.<br>
+        <!-- 카페온더플랜 소개글 -->
+        <h2>카페온더플랜 소개</h2>
+        <p>직접 로스팅한 스페셜티 커피를 제공합니다.<br>
         [대표메뉴]<br>
         -에스프레소 솔로솔로<br>
         -레드베리 아이스티<br>
@@ -113,7 +113,7 @@
 
         <!-- 네이버 지도 및 인스타그램 링크 -->
         <div class="link-container">
-            <a href="https://map.naver.com/p/search/카페%20온더플랜?c=15.00,0,0,0,dh" target="_blank">네이버 지도</a>
+            <a href="https://naver.me/xUSwOLP6" target="_blank">네이버 지도</a>
             <a href="https://www.instagram.com/onthe_plan/" target="_blank">인스타그램</a>
         </div>
 
@@ -124,7 +124,7 @@
         
         <!-- 목록으로 돌아가기 버튼 -->
         <div class="button-container">
-            <button onclick="location.href='../../main.html'">목록으로 돌아가기</button>
+            <button onclick="location.href='../../main.html?function=showPage&page=3&category=공부하기 좋은 카페'">목록으로 돌아가기</button>
         </div>
     </div>
 </body>
