--- a/main.html
+++ b/main.html
@@ -136,7 +136,7 @@
     <script>
         // 카페 데이터 배열
         const cafes = [
-            { href: "cafe/mood/pencil.html", img: "https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20230212_231%2F1676154913718sctjy_JPEG%2FScreenshot_20230212_073124_Instagram.jpg", name: "연필" },
+            { href: "cafe/mood/cafe1.html", img: "https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20230212_231%2F1676154913718sctjy_JPEG%2FScreenshot_20230212_073124_Instagram.jpg", name: "연필" },
             { href: "cafe/mood/cafe2.html", img: "https://search.pstatic.net/common/?src=https%3A%2F%2Fpup-review-phinf.pstatic.net%2FMjAyNDAzMTNfMTk3%2FMDAxNzEwMjk3Njc3MTA4.-3lLBcSfPAOTJO_4Or88ZAjM2Py_hP3xR6S-I3Ti9-wg.qQFe97Jj7VPPiAA3I8MZQT7PpKrKsGzbbw_ZCpkf8OMg.JPEG%2FIMG_2222.jpeg%3Ftype%3Dw1500_60_sharpen", name: "IWLT SEOUL" },
             { href: "cafe/mood/cafe3.html", img: "https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAzMTNfMTc5%2FMDAxNzEwMzA0NzI2MjM1.yHz2hH9nV9iXCYE3dxbYpJYojD21_-MF3zdy_Bh8Qj4g.Gz8IdQGGcg6GInVm_o-WjkuX3WM1os3WJkbKUVr-1yQg.JPEG%2FKakaoTalk_Photo_2024-03-13-13-38-30_016.jpeg", name: "엠케이갤러리스튜디오" },
             { href: "cafe/mood/cafe4.html", img: "https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyNDAzMDdfMjQx%2FMDAxNzA5NzQ2MDAwNDYy.PjOmn3voaggALM-FnnxLqLTqu0yTS81POH0VpRjppf8g.7NF7iK852kEVM0PYqlr2ANhl2zXkmaNMyXA7zXHu-gUg.JPEG%2F20240227%25A3%25DF192148.jpg", name: "본지르르 성수" },
@@ -193,9 +193,21 @@
                 gallery.appendChild(cafeElement);
             });
         }
+        
+        // 페이지 로드 시 쿼리 매개변수 확인하여 페이지를 설정하는 함수
+        function initializePage() {
+            const page = getQueryParam('page');
+            const category = getQueryParam('category');
 
-        // 초기 페이지 설정
-        showMainPage();
+            if (page && category) {
+                showPage(parseInt(page), category);
+            } else {
+                showMainPage();
+            }
+        }
+
+        // 페이지 로드 시 초기화 함수 호출
+        initializePage();
     </script>
 </body>
 </html>
